--- a/Codebase/API/EGGS-API/Domain/Domain.csproj
+++ b/Codebase/API/EGGS-API/Domain/Domain.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
   </ItemGroup>
 
   <ItemGroup>
