--- a/Codebase/API/EGGS-API/Domain/Domain.csproj
+++ b/Codebase/API/EGGS-API/Domain/Domain.csproj
@@ -12,4 +12,9 @@
     <ProjectReference Include="..\Access\Access.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Factories\" />
+    <Folder Include="Helpers\" />
+  </ItemGroup>
+
 </Project>
