--- a/Codebase/API/EGGS-API/EGGS-API/Properties/launchSettings.json
+++ b/Codebase/API/EGGS-API/EGGS-API/Properties/launchSettings.json
@@ -4,8 +4,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:49895",
-      "sslPort": 44331
+      "applicationUrl": "",
+      "sslPort": 
     }
   },
   "profiles": {
@@ -21,7 +21,7 @@
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "api/EGGS",
-      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "applicationUrl": "",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
